# serializer version: 1
# name: test_confval_snapshot[confval_entry]
  '''
  <desc classes="api-container api-profile--confval" domain="std" objtype="confval">
      <desc_signature api_managed="True" classes="sig sig-object api-header" html_attrs="{'data-signature-expanded': 'false'}" ids="confval.demo_option">
          <api_component classes="api-layout" name="api-layout" tag="div">
              <api_component classes="api-layout-left" name="api-layout-left" tag="div">
                  <api_component classes="api-signature" name="api-signature" tag="div">
                      <desc_name classes="sig-name descname" xml:space="preserve">
                          demo_option
                  <api_permalink classes="headerlink api-link" href="#confval.demo_option" title="Link to this definition">
              <api_component classes="api-layout-right gas-toolbar" name="api-layout-right" tag="div">
                  <api_inline_component classes="api-badge-container" name="api-badge-container" tag="span">
                      <inline classes="sas-badge-group">
                          <inline classes="sas-badge--type">
                              config
                          <inline>
                               
                          <inline classes="sas-badge--rebuild">
                              env
      <desc_content classes="api-content">
          <api_component classes="api-parameters gal-region gal-region--fields" name="api-parameters" tag="div">
              <field_list>
                  <field>
                      <field_name>
                          Type
                      <field_body>
                          <paragraph>
                              bool
          <api_component classes="api-description gal-region gal-region--narrative" name="api-description" tag="div">
              <paragraph>
                  A demo option.
  '''
# ---
# name: test_large_signature_snapshot_annotated[large_signature_annotated]
  '''
  <desc classes="api-container api-profile--py-method" domain="py" objtype="method">
      <desc_signature api_managed="True" classes="sig sig-object api-header" html_attrs="{'data-signature-expanded': 'false'}" ids="demo.Session.__init__">
          <api_component classes="api-layout" name="api-layout" tag="div">
              <api_component classes="api-layout-left" name="api-layout-left" tag="div">
                  <api_component classes="api-signature" name="api-signature" tag="div">
                      <desc_name classes="sig-name descname" xml:space="preserve">
                          __init__
                      <gal_sig_fold first_param="session_name" panel_id="demo.Session.__init__--signature-expanded" param_count="13">
                      <api_component classes="api-signature-expanded gal-sig-expanded" html_attrs="{'aria-hidden': 'true', 'data-expanded': 'false', 'hidden': 'hidden', 'id': 'demo.Session.__init__--signature-expanded'}" name="api-signature-expanded" tag="div">
                          <desc_parameterlist multi_line_parameter_list="True" multi_line_trailing_comma="False" xml:space="preserve">
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      session_name
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          str
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      window_name
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          str
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "main"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      start_directory
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          str
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "/tmp"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      attach
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          bool
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      True
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      kill_session
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          bool
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      False
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      environment
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          dict[str, str] | None
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      None
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      x
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          int
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      80
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      y
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          int
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      24
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      command
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          str
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "bash"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      shell
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          str
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "zsh"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      socket_name
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          str
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "default"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      socket_path
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          str | None
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      None
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      config_file
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_punctuation classes="p">
                                      :
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_name classes="n">
                                      <emphasis>
                                          str | None
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      None
                          <api_inline_component classes="gal-sig-collapse" html_attrs="{'aria-controls': 'demo.Session.__init__--signature-expanded', 'aria-expanded': 'true', 'type': 'button'}" name="gal-sig-collapse" tag="button">
                              [collapse]
                  <api_permalink classes="headerlink api-link" href="#demo.Session.__init__" title="Link to this definition">
              <api_component classes="api-layout-right gas-toolbar" name="api-layout-right" tag="div">
                  <api_inline_component classes="api-badge-container" name="api-badge-container" tag="span">
                      <inline classes="gas-badge-group">
                          <inline classes="gas-badge">
                              method
                  <api_inline_component classes="api-source-link" name="api-source-link" tag="span">
                      <reference internal="False">
                          <inline classes="viewcode-link">
                              [source]
      <desc_content classes="api-content">
          <api_component classes="api-description gal-region gal-region--narrative" name="api-description" tag="div">
              <paragraph>
                  Create a richly configurable session.
          <api_component classes="api-parameters gal-region gal-region--fields" name="api-parameters" tag="div">
              <gal_fold kind="parameters" summary="Parameters (13)">
                  <field_list>
                      <field>
                          <field_name>
                              Parameters
                          <field_body>
                              <bullet_list>
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              session_name
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              window_name
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              start_directory
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              attach
                                           (
                                          <emphasis>
                                              bool
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              kill_session
                                           (
                                          <emphasis>
                                              bool
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              environment
                                           (
                                          <emphasis>
                                              dict[str, str] | None
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              x
                                           (
                                          <emphasis>
                                              int
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              y
                                           (
                                          <emphasis>
                                              int
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              command
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              shell
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              socket_name
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              socket_path
                                           (
                                          <emphasis>
                                              str | None
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              config_file
                                           (
                                          <emphasis>
                                              str | None
                                          )
  '''
# ---
# name: test_large_signature_snapshot_annotation_disabled[large_signature_annotation_disabled]
  '''
  <desc classes="api-container api-profile--py-method" domain="py" objtype="method">
      <desc_signature api_managed="True" classes="sig sig-object api-header" html_attrs="{'data-signature-expanded': 'false'}" ids="demo.Session.__init__">
          <api_component classes="api-layout" name="api-layout" tag="div">
              <api_component classes="api-layout-left" name="api-layout-left" tag="div">
                  <api_component classes="api-signature" name="api-signature" tag="div">
                      <desc_name classes="sig-name descname" xml:space="preserve">
                          __init__
                      <gal_sig_fold first_param="session_name" panel_id="demo.Session.__init__--signature-expanded" param_count="13">
                      <api_component classes="api-signature-expanded gal-sig-expanded" html_attrs="{'aria-hidden': 'true', 'data-expanded': 'false', 'hidden': 'hidden', 'id': 'demo.Session.__init__--signature-expanded'}" name="api-signature-expanded" tag="div">
                          <desc_parameterlist multi_line_parameter_list="True" multi_line_trailing_comma="False" xml:space="preserve">
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      session_name
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      window_name
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "main"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      start_directory
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "/tmp"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      attach
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      True
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      kill_session
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      False
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      environment
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      None
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      x
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      80
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      y
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      24
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      command
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "bash"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      shell
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "zsh"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      socket_name
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      "default"
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      socket_path
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      None
                              <desc_parameter xml:space="preserve">
                                  <desc_sig_name classes="n">
                                      config_file
                                  <desc_sig_space classes="w">
                                       
                                  <desc_sig_operator classes="o">
                                      =
                                  <desc_sig_space classes="w">
                                       
                                  <inline classes="default_value">
                                      None
                          <api_inline_component classes="gal-sig-collapse" html_attrs="{'aria-controls': 'demo.Session.__init__--signature-expanded', 'aria-expanded': 'true', 'type': 'button'}" name="gal-sig-collapse" tag="button">
                              [collapse]
                  <api_permalink classes="headerlink api-link" href="#demo.Session.__init__" title="Link to this definition">
              <api_component classes="api-layout-right gas-toolbar" name="api-layout-right" tag="div">
                  <api_inline_component classes="api-badge-container" name="api-badge-container" tag="span">
                      <inline classes="gas-badge-group">
                          <inline classes="gas-badge">
                              method
                  <api_inline_component classes="api-source-link" name="api-source-link" tag="span">
                      <reference internal="False">
                          <inline classes="viewcode-link">
                              [source]
      <desc_content classes="api-content">
          <api_component classes="api-description gal-region gal-region--narrative" name="api-description" tag="div">
              <paragraph>
                  Create a richly configurable session.
          <api_component classes="api-parameters gal-region gal-region--fields" name="api-parameters" tag="div">
              <gal_fold kind="parameters" summary="Parameters (13)">
                  <field_list>
                      <field>
                          <field_name>
                              Parameters
                          <field_body>
                              <bullet_list>
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              session_name
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              window_name
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              start_directory
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              attach
                                           (
                                          <emphasis>
                                              bool
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              kill_session
                                           (
                                          <emphasis>
                                              bool
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              environment
                                           (
                                          <emphasis>
                                              dict[str, str] | None
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              x
                                           (
                                          <emphasis>
                                              int
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              y
                                           (
                                          <emphasis>
                                              int
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              command
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              shell
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              socket_name
                                           (
                                          <emphasis>
                                              str
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              socket_path
                                           (
                                          <emphasis>
                                              str | None
                                          )
                                  <list_item>
                                      <paragraph>
                                          <literal_strong>
                                              config_file
                                           (
                                          <emphasis>
                                              str | None
                                          )
  '''
# ---
# name: test_rst_directive_snapshot[rst_directive_entry]
  '''
  <desc classes="api-container api-profile--rst-directive" domain="rst" objtype="directive">
      <desc_signature api_managed="True" classes="sig sig-object api-header" html_attrs="{'data-signature-expanded': 'false'}" ids="directive-demo-directive">
          <api_component classes="api-layout" name="api-layout" tag="div">
              <api_component classes="api-layout-left" name="api-layout-left" tag="div">
                  <api_component classes="api-signature" name="api-signature" tag="div">
                      <desc_name classes="sig-name descname" xml:space="preserve">
                          demo-directive
                  <api_permalink classes="headerlink api-link" href="#directive-demo-directive" title="Link to this definition">
              <api_component classes="api-layout-right gas-toolbar" name="api-layout-right" tag="div">
                  <api_inline_component classes="api-badge-container" name="api-badge-container" tag="span">
                      <inline classes="sadoc-badge-group">
                          <inline classes="sadoc-badge--type">
                              directive
      <desc_content classes="api-content">
          <api_component classes="api-description gal-region gal-region--narrative" name="api-description" tag="div">
              <paragraph>
                  A demo directive.
          <api_component classes="api-footer gal-region gal-region--members" name="api-footer" tag="div">
              <desc classes="api-container api-profile--rst-directive-option" domain="rst" objtype="directive:option">
                  <desc_signature api_managed="True" classes="sig sig-object api-header" html_attrs="{'data-signature-expanded': 'false'}" ids="directive-option-demo-opt">
                      <api_component classes="api-layout" name="api-layout" tag="div">
                          <api_component classes="api-layout-left" name="api-layout-left" tag="div">
                              <api_component classes="api-signature" name="api-signature" tag="div">
                                  <desc_name classes="sig-name descname" xml:space="preserve">
                                      demo-opt
                              <api_permalink classes="headerlink api-link" href="#directive-option-demo-opt" title="Link to this definition">
                          <api_component classes="api-layout-right gas-toolbar" name="api-layout-right" tag="div">
                              <api_inline_component classes="api-badge-container" name="api-badge-container" tag="span">
                                  <inline classes="sadoc-badge-group">
                                      <inline classes="sadoc-badge--type">
                                          option
                  <desc_content classes="api-content">
                      <api_component classes="api-description gal-region gal-region--narrative" name="api-description" tag="div">
                          <paragraph>
                              A demo option.
  '''
# ---
